windeployqt: Append Qt bin directory to path.

Ensure qt.conf is taken into account when running qmake -query.

Task-number: QTBUG-39177
Change-Id: I0a8260033f49ddb21bf46ccbfe576ddb00db5679
Reviewed-by: Oliver Wolff <oliver.wolff@theqtcompany.com>